Complete on the header section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 
     <!--Header section(backround image, an automatic slider )-->
     <header id="head">
-      
-
-
-    </header>
+        <div class="imghead">
+            <img class ="bottom" src="./Assets/IMAGES/mokimo.jpg" alt="">
+            <img class ="top" src="./Assets/IMAGES/pinch.jpg" alt="">
+        </div>
+         <div class="best">
+              <h1>Something hot. Something tasty.</h1>
+              <h4> For hundreds of flavors under one roof, <br>lettuce cook. </h4>
+         </div>
+     </header>
     <!--Section three( List of recipes to check,Search and list of recipies)-->
     <!--Section four (A tab haeader for the about section)-->
     <!--Footer(social media icons, input for subscription)-->
