Add an about section and contact section and style them

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
         
     
     </div>
+
+
+    <section id="tab">
+        <div id="contact" class="content">
+            <h1>Our Contacts</h1>
+            <p>Email address: apinchofyum@gmail.com </p>
+            <p>Telephone: +254 745 455 507</p>
+       </div>
+       <div id="about" class="content">
+            <h1>About us</h1>
+            <p>A pinch of yum was started to share recipes. <br>To be a one store for all you want to prepare so we regularly update it with trending and ring recipes.<br> Hope you enjoy a we are here for you</p>
+       </div>
+
+
     <script src="./Assets/JS/script.js"></script>
 </body>
 </html>
