Link the about and contact sections to the nav bar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <ul id="nav">
         <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About Us</a></li>
     </ul>
 
 
