Comment the html section well

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>A pinch of yum was started to share recipes. <br>To be a one store for all you want to prepare so we regularly update it with trending and ring recipes.<br> Hope you enjoy a we are here for you</p>
        </div>
     </section>
-    
+    <!--Footer section-->
     <footer>
         <div class="footer">
             <p>@apinchofyum</p>
